--- a/view/A7/showroomCategoryManagement.html
+++ b/view/A7/showroomCategoryManagement.html
@@ -2,6 +2,8 @@
 
 <html lang="en">
     <script src="../header2.js"></script>
+    <script src="./js/loadCategoryTable.js"></script>
+
     <body>
         <div id="wrapper">
             <script src="../menu1.js"></script>
@@ -16,8 +18,20 @@
                         </div>
                     </div>
 
-                    <!-- Form to add category -->
-                    
+                    <!-- Button to add -->
+
+
+                    <!-- Table to display category -->
+                    <table class="table table-striped table-bordered table-hover" id="dataTables-example">
+                        <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>Category Name</th>
+                                <th>Description</th>
+                            </tr>
+                        </thead>
+                        <tbody id="tableBody"></tbody>
+                    </table>
 
                 </div>
             </div>
