--- a/view/A7/showroomCategoryManagement.html
+++ b/view/A7/showroomCategoryManagement.html
@@ -1,8 +1,14 @@
 <!-- Author: Tan Guan Ying -->
-
 <html lang="en">
     <script src="../header2.js"></script>
     <script src="./js/loadCategoryTable.js"></script>
+    <script src="./js/addCategory.js"></script>
+
+    <script>
+        function addCategory() {
+            window.location.href = "./showroomAddCategory.html";
+        }
+    </script>
 
     <body>
         <div id="wrapper">
@@ -11,31 +17,53 @@
             <div id="page-wrapper">
                 <div class="container-fluid">
 
-                    <!-- Add body content -->
-                    <div class="container-fluid">
+                    <div class="col-lg-12">
+                        <h1 class="page-header">Showroom Category Management</h1>
+                    </div>
+
+                    <div class="row">
                         <div class="col-lg-12">
-                            <h1 class="page-header">Showroom Category Management</h1>
+                            <div class="panel panel-default">
+
+                                <!-- Panel title -->
+                                <div class="panel-heading">
+                                    Showroom Category
+                                </div>
+
+                                <div class="panel-body">
+
+                                    <!-- Button -->
+                                    <div class="row mb-3" style = "margin-bottom: 15px;">
+                                        <div class="col-md-12">
+                                            <button 
+                                                class="btn btn-primary"
+                                                onclick="addCategory()">
+                                                Add Category
+                                            </button>
+                                        </div>
+                                    </div>
+
+                                    <!-- Table -->
+                                    <div class="table-responsive">
+                                        <table class="table table-striped table-bordered table-hover" id="dataTables-example">
+                                            <thead>
+                                                <tr>
+                                                    <th>ID</th>
+                                                    <th>Category Name</th>
+                                                    <th>Description</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody id="tableBody"></tbody>
+                                        </table>
+                                    </div>
+
+                                </div>
+                            </div>
                         </div>
                     </div>
 
-                    <!-- Button to add -->
-
-
-                    <!-- Table to display category -->
-                    <table class="table table-striped table-bordered table-hover" id="dataTables-example">
-                        <thead>
-                            <tr>
-                                <th>ID</th>
-                                <th>Category Name</th>
-                                <th>Description</th>
-                            </tr>
-                        </thead>
-                        <tbody id="tableBody"></tbody>
-                    </table>
-
                 </div>
             </div>
-
         </div>
     </body>
 </html>
