feat: added build showroom page for admin

--- a/view/A7/showroomLayoutManagement.html
+++ b/view/A7/showroomLayoutManagement.html
@@ -2,6 +2,7 @@
 
 <html lang="en">
     <script src="../header2.js"></script>
+    <script src="./js/loadCategoryTable.js"></script>
     <body>
         <div id="wrapper">
             <script src="../menu1.js"></script>
@@ -39,7 +40,7 @@
                                         <div class="box-content text-center">
                                             <i class="icon icon-th-large icon-featured"></i>
                                             <h4>Showroom Categories</h4>
-                                            <h2>0</h2>
+                                            <h2 id = "categoryCount">0</h2>
                                             <p class="text-muted">View and manage the current categories for showrooms.</p>
                                         </div>
                                     </div>
