feat: set up for showroom admin

--- a/view/A7/showroomAddShowroom.html
+++ b/view/A7/showroomAddShowroom.html
@@ -38,7 +38,29 @@
                     </div>
                     
                     <!-- Area to custom build showroom FORM -->
+                    <!--
+                        TABLE INVOLVED:
+                        showroom
+                        showroom_furniture (junction)
+                        showroom_category
+
+                        furnitureentity (already existed)
+
+                        STEPS TO DO:
+                        0: Get all furnitures in furnitureentity
+                        1: Add furniture by pressing add button. The modal come out to select which furniture to connect
+                        2: Then add it in a widget
+
+                        3: Upload showroom layout image
+                        4: drag from widget to the main showroom area
+
+                        5: can remove or edit furniture
+                    -->
                     
+                <div class="showroom-container">
+
+                </div>
+
 
                 </div>
             </div>
