--- a/view/A7/css/showroomManagement.css
+++ b/view/A7/css/showroomManagement.css
@@ -1,3 +1,4 @@
+/* button add */
 .btn-add-showroom {
     display: inline-block;
     padding: 12px 20px;
@@ -20,3 +21,6 @@
     text-decoration: none;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
 }
+
+/*------------------------------*/
+/* showroom */
