--- a/view/B/SG/showroomHome.html
+++ b/view/B/SG/showroomHome.html
@@ -9,8 +9,8 @@
     </head>
 
     <body>
-
         <script src="menu2.js"></script>
+
         <div role="main" class="main">
 
             <section class="page-top">
@@ -33,7 +33,7 @@
                     </span>
 
                     <input type = "text" placeholder = "Search Showrooms...">
-                    
+
                     <button class = "search-icon">
                         <i class = "bi bi-search"></i>
                     </button>
@@ -43,9 +43,42 @@
                 <div class = "category-dropdown"></div>
 
             </div>
+
+            <!-- carousel showroom to display featured ones-->
+            <div id="hero-carousel" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+
+                <div class="carousel-inner">
+                    <div class="carousel-item active c-item">
+                        <img src="#" class="d-block w-100 c-img" alt="Slide 1">
+                    </div>
+
+                    <div class="carousel-item c-item">
+                        <img src="#" class="d-block w-100 c-img" alt="Slide 2">
+                    </div>
+                </div>
+
+                <div class="carousel-item c-item">
+                    <img src="#" class="d-block w-100 c-img" alt="Slide 3">
+                </div>
+
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#hero-carousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#hero-carousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+            </div>
             
         </div>
-        <script src="../footer.js"></script>
 
+        <script src="../footer.js"></script>
     </body>
 </html>
