feat: create showroom form

--- a/view/A7/showroomAddShowroom.html
+++ b/view/A7/showroomAddShowroom.html
@@ -81,13 +81,18 @@
                                         </select>
                                     </div>
 
-                                    <div class = "form-group">
+                                    <!-- I tried to add file upload -->
+                                    <!-- <div class = "form-group">
                                         <label>Cover Image</label>
                                         <input type="file" name="coverfile" id="imgfile" accept="image/*" required>
+                                    </div> -->
+                                    <div class = "form-group">
+                                        <label>Cover Image URL</label>
+                                        <input class = "form-control" name = "coverImage" type = "url" placeholder = "https://example.com/image.jpg" required>
                                     </div>
 
                                     <div class="form-group">
-                                        <button type="button" class="btn btn-primary">Add Showroom</button>
+                                        <button type="submit" class="btn btn-primary">Add Showroom</button>
                                     </div>
                                 </fieldset>
                             </form>
