--- a/view/A7/showroomManagement.html
+++ b/view/A7/showroomManagement.html
@@ -5,6 +5,7 @@
         <script src="../header2.js"></script>
         <script src="./js/loadCategoryTable.js"></script>
         <script src="./js/addShowroom.js"></script>
+        <script src="./js/loadShowroom.js"></script>
 
         <link rel="stylesheet" href = "./css/showroomManagement.css">
     </head>
@@ -24,8 +25,10 @@
                     </div>
                     
                     <!-- Area to store saved built showroom -->
+                    <div class = "container-showroom">
+                        <div id = "showroomList" class = "row"></div>
+                    </div>
                     
-
                     <!-- Button to add showroom -->
                     <div class="row">
                         <div class="col-lg-12 text-right">
