--- a/view/B/css/showroom/carousel.css
+++ b/view/B/css/showroom/carousel.css
@@ -1,33 +1,27 @@
-@charset "UTF-8";
-
-.c-item {
-    height: 480px;
-}
-  
-.c-img {
-height: 700px;
-object-fit: cover;
-filter: brightness(0.6);
-}
-
+/* Carousel item container */
 .carousel-item {
-    height: 90vh;
+    height: 70vh;
 }
+
+/* Images inside carousel */
 .carousel-item img {
     height: 100%;
-    object-fit: cover; 
+    width: 100%;
+    object-fit: cover;
+    filter: brightness(0.6);
 }
 
+/* Optional: overlay captions */
 .carousel-caption {
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 100%;
-  width: 100%;
-  display: flex !important;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex !important;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: white;
+    background: rgba(0,0,0,0.3); /* optional overlay */
 }
