--- a/view/B/SG/showroomHome.html
+++ b/view/B/SG/showroomHome.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel = "stylesheet" href = "../css/showroom/showroomHome.css">
+        <link rel="stylesheet" href = "../css/showroom/carousel.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
