--- a/view/A7/css/showroomManagement.css
+++ b/view/A7/css/showroomManagement.css
@@ -9,6 +9,12 @@
     border-radius: 4px;
     text-decoration: none;
     transition: background-color 0.2s ease, box-shadow 0.2s ease;
+
+    /* make it stuck on screen, because it keeps getting pushed down by showrooms card as it increases*/
+    position: fixed;
+    bottom: 20px;   /* distance from bottom */
+    right: 20px;    /* distance from right */
+    z-index: 9999; 
 }
 
 .btn-add-showroom i {
