fix: remove brand filtering because not cruical

--- a/view/B/SG/showroomHome.html
+++ b/view/B/SG/showroomHome.html
@@ -92,23 +92,11 @@
                 </div>
 
                 <div class="filter-description">
-                    <p>Look for Showrooms that consist your desired furnitures.</p>
+                    <p>Find showrooms with the furniture you’re looking for.</p>
                 </div>
 
                 <form class="filter-form">
                     <div class = "filter-columns">
-
-                        <!-- Left side: Brands list -->
-                        <div class = "filter-column brands">
-                            <h6>Brands</h6>
-                            <div class = "checkbox-list">
-                                <label><input type="checkbox" value="brand1"> Brand 1</label>
-                                <label><input type="checkbox" value="brand2"> Brand 2</label>
-                                <label><input type="checkbox" value="brand3"> Brand 3</label>
-                                <label><input type="checkbox" value="brand4"> Brand 4</label>
-                                <label><input type="checkbox" value="brand5"> Brand 5</label>
-                            </div>
-                        </div>
 
                         <!-- Right column -->
                         <div class = "filter-column right-column">
