feat: added category list in filter panel

--- a/view/B/SG/showroomHome.html
+++ b/view/B/SG/showroomHome.html
@@ -111,12 +111,8 @@
                             <!-- Furniture type -->
                             <div class="furniture-type">
                                 <h6>Furniture Type</h6>
-                                <div class="checkbox-list">
-                                    <label><input type="checkbox" value="sofa"> Sofa</label>
-                                    <label><input type="checkbox" value="table"> Table</label>
-                                    <label><input type="checkbox" value="bed"> Bed</label>
-                                    <label><input type="checkbox" value="chair"> Chair</label>
-                                    <label><input type="checkbox" value="cabinet"> Cabinet</label>
+                                <div class="checkbox-list" id = "furniture-list">
+                                    <!-- populate furniture category -->
                                 </div>
                             </div>
                         </div>
