--- a/view/A7/showroomEditFurniture.html
+++ b/view/A7/showroomEditFurniture.html
@@ -1,6 +1,8 @@
 <!-- Author: Javeir tan jia ye -->
 <html lang="en">
     <script src="../header2.js"></script>
+    <script src="../A7/js/editShowroomFurniture.js"></script>
+    <link rel="stylesheet" href = "./css/showroomEditFurniture.css">
 
     <body>
         <div id="wrapper">
@@ -32,6 +34,10 @@
 
 
 
+                    <div class="showroom" >
+                        <img id="showroom-img" src="" alt="" style="width: 100%;">
+                    </div>
+                    
 
 
 
