--- a/view/B/SG/showroomDetail.html
+++ b/view/B/SG/showroomDetail.html
@@ -35,12 +35,16 @@
             <!-- Showroom Detail -->
             <div class = "main-showcase">
                 <div class = "container">
-                    <div class = "row">
+                    <div class = "row showroom-layout">
                         <!-- Display the furnitures images inside that showroom -->
-                        <div id = "furniture-list" class = "furniture-list"></div>
+                        <div class = "col-md-3 col-lg-2">
+                            <div id = "furniture-list" class = "furniture-list"></div>
+                        </div>
 
                         <!-- Main showroom image -->
-                        <div id = "showroom-image" class = "showroom-image"></div>
+                        <div class = "col-md-9 col-lg-10">
+                            <div id = "showroom-image" class = "showroom-image"></div>
+                        </div>
                     </div>
                 </div>
             </div>
