feat: added description

--- a/view/B/SG/showroomDetail.html
+++ b/view/B/SG/showroomDetail.html
@@ -46,6 +46,7 @@
                         <!-- Main showroom image -->
                         <div class = "col-md-8 col-lg-9">
                             <div id = "showroom-image" class = "showroom-image"></div>
+                            <div id = "showroom-description" class = "showroom-description"></div>
                         </div>
                     </div>
                 </div>
