chore: setup for draggables

--- a/view/A7/showroomEditFurniture.html
+++ b/view/A7/showroomEditFurniture.html
@@ -57,8 +57,10 @@
 
 
 
-                    <div class="showroom" >
+                    <div class="showroom" id="showroom">
                         <img id="showroom-img" src="" alt="" style="width: 100%;border-radius: 1rem;">
+
+
                     </div>
                     
                     <br><br><br>
