--- a/view/A7/css/showroomEditFurniture.css
+++ b/view/A7/css/showroomEditFurniture.css
@@ -132,20 +132,11 @@
 
 
 
-
-
-#mydiv {
-  position: absolute;
-  z-index: 9;
-  background-color: #f1f1f1;
-  text-align: center;
-  border: 1px solid #d3d3d3;
+.draggable {
+    position: absolute;
+    top: 0;
+    left: 0;
 }
-
-#mydivheader {
-  padding: 10px;
-  cursor: move;
-  z-index: 10;
-  background-color: #2196F3;
-  color: #fff;
+.drag-header {
+    cursor: move;
 }
