feat: added other showroom loaded below

--- a/view/B/SG/showroomDetail.html
+++ b/view/B/SG/showroomDetail.html
@@ -13,6 +13,7 @@
         <!-- <script src="../js/loadPublicShowroom.js" defer></script> -->
         <!-- <script src="../js/filterMenu.js" defer></script> -->
         <script src="../js/loadShowroomDetails.js" defer></script>
+        <script src="../js/loadOtherShowroomBelow.js" defer></script>
         <script src="../../header.js"></script>
     </head>
 
@@ -31,6 +32,20 @@
                     </div>
                 </div>
             </section>
+
+            <!-- Breadcrumb -->
+            <div class="breadcrumb-nav row">
+                <div class="col-lg-12">
+                    <ol class="breadcrumb">
+                        <li>
+                            <a href="showroomHome.html">Showroom Homepage</a>
+                        </li>
+                        <li class="active">
+                            View Showroom Details
+                        </li>
+                    </ol>
+                </div>
+            </div>
 
             <!-- Showroom Detail -->
             <div class = "main-showcase">
