feat: added dot to represent where the furniture are placed

--- a/view/B/SG/showroomDetail.html
+++ b/view/B/SG/showroomDetail.html
@@ -14,6 +14,8 @@
         <!-- <script src="../js/filterMenu.js" defer></script> -->
         <script src="../js/loadShowroomDetails.js" defer></script>
         <script src="../js/loadOtherShowroomBelow.js" defer></script>
+        <script src="../js/furniturePosition.js" defer></script>
+
         <script src="../../header.js"></script>
     </head>
 
