feat: added more details button

--- a/view/B/SG/showroomDetail.html
+++ b/view/B/SG/showroomDetail.html
@@ -88,6 +88,11 @@
                     <span id="panel-width"></span>
                 </div>
 
+                <!-- More details -->
+                <button id = "more-details-btn" class = "btn-link">
+                    More Details
+                </button>
+
                 <!-- Add to cart or buy now -->
                 <div class="panel-actions">
                     <button id="add-to-cart-btn" class="btn-action">Add To Cart</button>
