feat: added click-to-add-point functionality (and backtrack 6 commits worth of progress)

--- a/view/A7/css/showroomEditFurniture.css
+++ b/view/A7/css/showroomEditFurniture.css
@@ -3,6 +3,11 @@
     width: 100%;
     border-radius: 1rem;
 }
+.showroom canvas {
+  width: 100%;
+  border-radius: 1rem;
+  display: block;
+}
 
 /* furniture row display */
 .furniture{
