--- a/view/A7/showroomEditFurniture.html
+++ b/view/A7/showroomEditFurniture.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <script src="../header2.js"></script>
-        <script src="../A7/js/editShowroomFurniture.js"></script>
+        <script src="../A7/js/editShowroomFurniture.js" defer></script>
         <link rel="stylesheet" href = "./css/showroomEditFurniture.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     </head>
@@ -55,19 +55,22 @@
                     </div>
 
 
+<!-- 
+                    <div class="showroom" id="showroom">
+                        <img id="showroom-img" src="" alt="" style="width: 100%;border-radius: 1rem;">
+                    </div> -->
+                    
 
 
                     <div class="showroom" id="showroom">
-                        <img id="showroom-img" src="" alt="" style="width: 100%;border-radius: 1rem;">
-
-
+                        <canvas id="showroom-canvas"></canvas>
                     </div>
-                    
+
                     <br><br><br>
                     
-                    <div class="furniture" id="furniture-list">
+                    <!-- <div class="furniture" id="furniture-list">
                         <br>
-                    </div>
+                    </div> -->
 
                     <br><br><br><br><br>
                     <br><br><br><br><br>
@@ -79,7 +82,8 @@
 
 
 
-                    
+  
+
 
                 </div>
             </div>
