--- a/view/A7/showroomEditFurniture.html
+++ b/view/A7/showroomEditFurniture.html
@@ -59,11 +59,14 @@
                     <div class="showroom" id="showroom">
                         <img id="showroom-img" src="" alt="" style="width: 100%;border-radius: 1rem;">
                     </div> -->
-                    
                     <!-- Custom context menu -->
                     <div id="context-menu">
-                        <button class="btn context-menu-btn" id="remove-point-btn">Remove</button>
-                        <button class="btn context-menu-btn" id="tag-furniture-btn">Tag furniture</button>
+                        <div id="context-menu-buttons">
+                            <button class="btn context-menu-btn" id="tag-furniture-btn">Tag furniture</button>
+                            <button class="btn context-menu-btn" id="remove-point-btn">Remove</button>
+                        </div>
+                        
+                        <div id="furniture-info" style="display: flex;"></div>
                     </div>
 
                     <div class="showroom" id="showroom">
