feat: added name field in filter panel

--- a/view/B/SG/showroomHome.html
+++ b/view/B/SG/showroomHome.html
@@ -100,6 +100,13 @@
 
                         <!-- Right column -->
                         <div class = "filter-column right-column">
+
+                            <!-- Name -->
+                            <div class = "furniture-name">
+                                <h6>Furniture Name</h6>
+                                <input type = "text" placeholder = "LINMON">
+                            </div>
+
                             <!-- Dimension -->
                             <div class = "dimensions">
                                 <h6>Dimensions</h6>
