--- a/view/B/SG/showroomDetail.html
+++ b/view/B/SG/showroomDetail.html
@@ -18,6 +18,7 @@
         <script src="../js/loadOtherShowroomBelow.js" defer></script>
         <script src="../js/furniturePosition.js" defer></script>
         <script src="../js/loadFurniturePanel.js" defer></script>
+        <script src="../js/cart.js" defer></script>
 
         <script src="../../header.js"></script>
     </head>
@@ -102,6 +103,9 @@
 
             <!-- Other showrooms of that same category (LATER DO)-->
             <div id = "other-showrooms" class = "other-showrooms"></div>
+
+            <!-- Cart Status notification -->
+            <div id = "toast" class = "toast hidden"></div>
 
         <script src="../footer.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
