fix: added new showroom images that fits furniture marker

--- a/view/A7/showroomAddShowroom.html
+++ b/view/A7/showroomAddShowroom.html
@@ -84,6 +84,7 @@
 
                                     <div class = "form-group">
                                         <label>Cover Image URL</label>         <!-- type="file" accept="image/*"  to open file explorer-->
+                                        <p>Recommended Image Width and Length Dimensions: (1300 x 800)</p>
                                         <input class="form-control" name="coverImage" id="coverImage" type="file" accept="image/*" placeholder="https://example.com/image.jpg" required>
                                     </div>
 
