feat: added some refinement

--- a/view/B/SG/showroomHome.html
+++ b/view/B/SG/showroomHome.html
@@ -153,6 +153,7 @@
 
                     <!-- Dont use submit, it refreshes the page instead of filtering -->
                     <button id = "apply-filter" type="button" class="apply-btn">Apply Filters</button>
+                    <button id = "clear-filter" type = "button" class = "clear-btn">Clear Filter</button>
                 </form>
             </div>
         </div>
