feat: endpoint for showing other furnitures as recommendation in showroom detail

--- a/view/B/SG/showroomDetail.html
+++ b/view/B/SG/showroomDetail.html
@@ -108,7 +108,24 @@
             </div>
 
             <!-- Other showrooms of that same category (LATER DO)-->
-            <div id = "other-showrooms" class = "other-showrooms"></div>
+            <div class = "other-showrooms-section">
+                <div class = "other-showrooms-header">
+                    <h2>Explore other showrooms</h2>
+                    <p>Get inspired by thoughtfully designed showrooms, curated to help you imagine your perfect home.</p>
+                </div>
+
+                <div id = "other-showrooms" class = "other-showrooms"></div>
+            </div>
+
+            <!-- Other furniture randomise that is the same for the categories of furniture -->
+            <div class = "other-showrooms-section">
+                <div class = "other-showrooms-header">
+                    <h2>Thoughtfully chosen furniture for your space</h2>
+                    <p>Explore furniture pieces curated to match this showroom and inspire your ideal home setup.</p>
+                </div>
+
+                <div id = "other-furnitures" class = "other-furnitures"></div>
+            </div>
 
             <!-- Cart Status notification -->
             <div id = "toast" class = "status-toast hidden"></div>
