feat: added other furniture

--- a/view/B/SG/showroomDetail.html
+++ b/view/B/SG/showroomDetail.html
@@ -124,7 +124,12 @@
                     <p>Explore furniture pieces curated to match this showroom and inspire your ideal home setup.</p>
                 </div>
 
-                <div id = "other-furnitures" class = "other-furnitures"></div>
+                <div>
+                    <div class = "container">
+                        <div id = "other-furnitures" class = "row other-furnitures"></div>
+                    </div> 
+                </div>
+
             </div>
 
             <!-- Cart Status notification -->
